--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "pubsub": "^3.2.1",
+    "pubsub-js": "^1.9.4",
+    "scss": "^0.2.4",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4"
   },
@@ -20,7 +23,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
     "root": true,
