--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "pubsub": "^3.2.1",
     "pubsub-js": "^1.9.4",
+    "quill": "^1.3.7",
     "scss": "^0.2.4",
     "vue": "^3.2.13",
+    "vue-quill": "^1.5.1",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
