--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
     "pubsub": "^3.2.1",
     "pubsub-js": "^1.9.4",
     "quill": "^1.3.7",
