--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "js-cookie": "^3.0.5",
+    "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "pubsub": "^3.2.1",
     "pubsub-js": "^1.9.4",
     "quill": "^1.3.7",
     "scss": "^0.2.4",
+    "socket.io": "^4.7.2",
     "vue": "^3.2.13",
     "vue-quill": "^1.5.1",
     "vue-router": "^4.2.4"
