--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "quill": "^1.3.7",
     "scss": "^0.2.4",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "vue": "^3.2.13",
     "vue-quill": "^1.5.1",
     "vue-router": "^4.2.4"
