--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
+    "day": "^0.0.2",
+    "dayjs": "^1.11.9",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
