--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.1.1",
     "day": "^0.0.2",
     "dayjs": "^1.11.9",
+    "highlight.js": "^11.8.0",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
